--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
     <title>Quote Generator</title>
   </head>
   <body>
-    <div class="quote-container" id="quotecontainer">
+    <div class="quote-container" id="quote-container">
       <!-- Quote Element -->
       <div class="quote-text">
         <i class="fas fa-quote-left"></i>
         <span id="quote"
-          >What you are is what you have been. What you'll be is what you do
-          now.</span
+          ></span
         >
         <i class="fas fa-quote-right"></i>
       </div>
       <!-- Author -->
       <div class="quote-author">
-        <span id="author">Buddha</span>
+        <span id="author"></span>
       </div>
       <!-- Buttons -->
       <div class="button-container">
@@ -33,6 +32,8 @@
         <button id="new-quote">New Quote</button>
       </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
